<resources>
    <string name="app_name">Chat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="onboarding_text">Connect friends easily &amp; quickly</string>
    <string name="onBoarding_subtext">Our app is a perfect way to stay connected with friends and family.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_screen_title">Login to the app</string>
    <string name="login_screen_subtitle">Lorem ipsum Text It is just to demonstrate the subheading.\n</string>
    <string name="sign_up">Sign up</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="sign_up_screen_title">Sign up with Email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="facebook_app_id">3117595991706235</string>
    <string name="fb_login_protocol_scheme">fb3117595991706235</string>
    <string name="facebook_client_token">2b7e574fce2eeeebacac3889aafd2686</string>
    <string name="google_auth_web_clientid">627212615324-8j8l41kl4oo7hrno075hc3afume3rlkh.apps.googleusercontent.com</string>
    <string name="google_auth_nonce">lnkEsauRWC/KPXSvj/ERcAt048DzxIZG</string>
    <string name="empty_string" />
    <string name="google_auth_token">Google Authentication Token</string>
    <string name="type_a_message">Enter Message</string>


</resources>