<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin">

        <!-- Navigate Up Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/navigate_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_to_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/login_screen_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigate_up" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="45dp"
            android:layout_height="10dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="-10dp"
            app:layout_constraintStart_toStartOf="@id/title_to_login"
            app:dividerColor="@color/opaque_blue"
            app:layout_constraintTop_toBottomOf="@id/title_to_login"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/login_screen_subtitle"
            android:textColor="@color/subheading_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_to_login" />

        <FrameLayout
            android:id="@+id/oAuthContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_login">

            <include
                android:id="@+id/oAuthContainerLayout"
                layout="@layout/oauth_controllers_layout" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/divid_with_or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:src="@drawable/or_in_dividers_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oAuthContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divid_with_or">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:text="user@example.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTIL"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/opaque_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:text="string"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTIL"
            app:layout_constraintVertical_bias="0.4" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/light_blue_600"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
            app:layout_constraintStart_toStartOf="@+id/passwordTIL"
            app:layout_constraintTop_toBottomOf="@id/passwordTIL" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noExistingAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginEnd="20dp"
            android:text="No Account? "
            android:textColor="#B9C1BE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="100dp"
            android:text="@string/sign_up"
            android:textColor="@color/light_blue_600"
            app:layout_constraintStart_toEndOf="@id/noExistingAccount"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>