<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.SignupFragment"
    android:background="@color/screen_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin">

        <!-- Navigate Up Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/navigate_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/navigate_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_to_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_screen_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigate_up" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="42dp"
            android:layout_height="10dp"
            android:layout_marginStart="103dp"
            android:layout_marginTop="58dp"
            app:dividerColor="#80039BE5"
            app:layout_constraintEnd_toEndOf="@id/title_to_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/title_to_signup"
            app:layout_constraintTop_toBottomOf="@+id/navigate_up" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/login_screen_subtitle"
            android:textColor="@color/subheading_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_to_signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_signup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textEmailAddress"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPasswordTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/subheading_text_color"
                android:textColorHint="@color/light_blue_600" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confPasswordTIL"
            app:layout_constraintVertical_bias="0.5"/>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordTIL"
            app:layout_constraintStart_toStartOf="@+id/passwordTIL"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginEnd="20dp"
            android:text="Already Have an Account? "
            android:textColor="#B9C1BE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignup" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="100dp"
            android:text="@string/login"
            android:textColor="@color/light_blue_600"
            app:layout_constraintStart_toEndOf="@id/alreadyHaveAnAccount"
            app:layout_constraintTop_toBottomOf="@id/btnSignup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
