<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.Chat.FullscreenContainer"
    tools:context=".onBoarding.OnBoarding">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:cropToPadding="true"
        android:elevation="0dp"
        android:background="@color/screen_bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/onboarding" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_ic_container"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="60dp"
                app:cardCornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/onBoardingText"
                style="@style/TextAppearance.MaterialComponents.Headline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:text="@string/onboarding_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_ic_container" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/onBoardingSubText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="20dp"
                android:text="@string/onBoarding_subtext"
                android:textColor="@color/subheading_text_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onBoardingText" />

            <FrameLayout
                android:id="@+id/oAuthContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/onBoardingSubText">

                <include
                    android:id="@+id/oAuthContainerLayout"
                    layout="@layout/oauth_controllers_layout" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/divid_with_or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:src="@drawable/or_in_dividers_ic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oAuthContainer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignupWithEmail"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginVertical="30dp"
                android:text="Signup with an email"
                android:textAllCaps="false"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divid_with_or" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/isExistingAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginEnd="20dp"
                android:text="Existing Account? "
                android:textColor="@color/subheading_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignupWithEmail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="100dp"
                android:text="@string/login"
                android:textColor="@color/light_blue_600"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/isExistingAccount"
                app:layout_constraintTop_toBottomOf="@id/btnSignupWithEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>